--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@expo/metro-config": "^0.3.11",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-safe-area-context": "^4.1.0",
+    "react-native-screens": "^3.13.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^1.0.0"
   },
